force-app/main/default/objects/CB_Organization__c/CB_Organization__c.object-meta.xml
<CustomObject>
    <description>Crunchbase Organization Data</description>
    <label>Organization</label>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>