force-app/main/default/objects/CB_Organization__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>