force-app/main/default/objects/CB_Organization__c/fields/Category_Group_List__c.field-meta.xml
<CustomField>
    <fullName>Category_Group_List__c</fullName>
    <label>Category Group List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category_Group</valueSetName>
    </valueSet>
</CustomField>