force-app/main/default/objects/CB_Organization__c/fields/Category_List__c.field-meta.xml
<CustomField>
    <fullName>Category_List__c</fullName>
    <label>Category List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3d printing</fullName>
            </value>
            <value>
                <fullName>3d technology</fullName>
            </value>
            <value>
                <fullName>accounting</fullName>
            </value>
            <value>
                <fullName>ad network</fullName>
            </value>
            <value>
                <fullName>ad targeting</fullName>
            </value>
            <value>
                <fullName>advanced materials</fullName>
            </value>
            <value>
                <fullName>adventure travel</fullName>
            </value>
            <value>
                <fullName>advertising</fullName>
            </value>
            <value>
                <fullName>advertising platforms</fullName>
            </value>
            <value>
                <fullName>advice</fullName>
            </value>
            <value>
                <fullName>aerospace</fullName>
            </value>
            <value>
                <fullName>affiliate marketing</fullName>
            </value>
            <value>
                <fullName>agriculture</fullName>
            </value>
            <value>
                <fullName>air transportation</fullName>
            </value>
            <value>
                <fullName>analytics</fullName>
            </value>
            <value>
                <fullName>android</fullName>
            </value>
            <value>
                <fullName>angel investment</fullName>
            </value>
            <value>
                <fullName>animal feed</fullName>
            </value>
            <value>
                <fullName>animation</fullName>
            </value>
            <value>
                <fullName>application performance management</fullName>
            </value>
            <value>
                <fullName>app marketing</fullName>
            </value>
            <value>
                <fullName>apps</fullName>
            </value>
            <value>
                <fullName>architecture</fullName>
            </value>
            <value>
                <fullName>art</fullName>
            </value>
            <value>
                <fullName>artificial intelligence</fullName>
            </value>
            <value>
                <fullName>asset management</fullName>
            </value>
            <value>
                <fullName>auctions</fullName>
            </value>
            <value>
                <fullName>audio</fullName>
            </value>
            <value>
                <fullName>augmented reality</fullName>
            </value>
            <value>
                <fullName>auto insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>