force-app/main/default/objects/CB_Organization__c/fields/Closed_on__c.field-meta.xml
<CustomField>
    <fullName>Closed_on__c</fullName>
    <label>Closed on</label>
    <type>Date</type>
</CustomField>