force-app/main/default/objects/CB_Organization__c/fields/country_code__c.field-meta.xml
<CustomField>
    <fullName>country_code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code</valueSetName>
    </valueSet>
</CustomField>