force-app/main/default/objects/CB_Organization__c/fields/Crunchbase_UUID__c.field-meta.xml
<CustomField>
    <fullName>Crunchbase_UUID__c</fullName>
    <externalId>true</externalId>
    <label>Crunchbase-UUID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>