force-app/main/default/objects/CB_Organization__c/fields/Description_short__c.field-meta.xml
<CustomField>
    <fullName>Description_short__c</fullName>
    <label>Description (short)</label>
    <type>TextArea</type>
</CustomField>