force-app/main/default/objects/CB_Organization__c/fields/First_funding_on__c.field-meta.xml
<CustomField>
    <fullName>First_funding_on__c</fullName>
    <label>First funding on</label>
    <type>Date</type>
</CustomField>