force-app/main/default/objects/CB_Organization__c/fields/Funding_Rounds__c.field-meta.xml
<CustomField>
    <fullName>Funding_Rounds__c</fullName>
    <label>Funding Rounds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>