force-app/main/default/objects/CB_Organization__c/fields/Funding_Total_USD__c.field-meta.xml
<CustomField>
    <fullName>Funding_Total_USD__c</fullName>
    <label>Funding Total USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>