force-app/main/default/objects/CB_Organization__c/fields/Investment_Count__c.field-meta.xml
<CustomField>
    <fullName>Investment_Count__c</fullName>
    <label>Investment Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>