force-app/main/default/objects/CB_Organization__c/fields/Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>Investor_Type__c</fullName>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Investor_Type</valueSetName>
    </valueSet>
</CustomField>