force-app/main/default/objects/CB_Organization__c/fields/Last_funding_on__c.field-meta.xml
<CustomField>
    <fullName>Last_funding_on__c</fullName>
    <label>Last funding on</label>
    <type>Date</type>
</CustomField>