force-app/main/default/objects/CB_Organization__c/fields/Parent_Organization__c.field-meta.xml
<CustomField>
    <fullName>Parent_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Organization</label>
    <referenceTo>CB_Organization__c</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Child_Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>