force-app/main/default/objects/CB_Organization__c/fields/Primary_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Role__c</fullName>
    <label>Primary Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Role</valueSetName>
    </valueSet>
</CustomField>