force-app/main/default/objects/CB_Organization__c/fields/Profile_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Image_URL__c</fullName>
    <label>Profile Image URL</label>
    <type>Url</type>
</CustomField>