force-app/main/default/objects/CB_Organization__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Code</valueSetName>
    </valueSet>
</CustomField>