force-app/main/default/objects/CB_Organization__c/fields/Total_Investment_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment_USD__c</fullName>
    <label>Total Investment USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>